[package]
name = "hermes"
version = "0.4.1"
edition = "2021"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hermes"
path = "src/bin/hermes.rs"

[features]
default = ["protocols-sshfs"]
protocols-sshfs = ["remote-mount/protocols-sshfs"]

[dependencies]
clap = { version = "4.4.16", features = ["derive", "env"] }
remote-mount = { path = "../remote-mount", features = ["protocols-sshfs"] }
axum = { version = "0.7.3" }
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.17"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
