[package]
name = "hermes"
version = "0.4.3"
edition = "2024"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hermes"
path = "src/bin/hermes.rs"

[lints.rust]
unsafe_code = "forbid"

[features]
default = ["protocols-sshfs"]
protocols-sshfs = ["remote-mount/protocols-sshfs"]

[dependencies]
clap = { version = "4.5.30", features = ["derive", "env"] }
remote-mount = { path = "../remote-mount", features = ["protocols-sshfs"] }
axum = { version = "0.8.1" }
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.17"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.96"
