[package]
name = "remote-mount"
version = "0.4.2"
edition = "2021"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[features]
default = []
protocols-sshfs = ["which", "tokio"]

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-trait]
version = "0.1.77"

[dependencies.tokio]
version = "1.35.1"
features = ["full"]
optional = true

[dependencies.which]
version = "5.0.0"
optional = true

[dependencies.log]
version = "0.4.20"
