[package]
name = "remote-mount"
version = "0.4.2"
edition = "2021"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[features]
default = []
protocols-sshfs = ["which", "tokio"]

[dependencies]
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["full"], optional = true }
which = { version = "7.0.0", optional = true }
log = "0.4.22"
async-trait = "0.1.83"
