[package]
name = "remote-mount"
version = "0.4.2"
edition = "2024"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[features]
default = []
protocols-sshfs = ["which", "tokio"]

[dependencies]
anyhow = "1.0.96"
tokio = { version = "1.43.1", features = ["full"], optional = true }
which = { version = "7.0.2", optional = true }
log = "0.4.26"
async-trait = "0.1.86"
