[package]
name = "remote-mount"
version = "0.3.0"
edition = "2021"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[features]
protocols-full = ["protocols-sshfs"]
protocols-sshfs = ["which", "tokio"]

[dependencies]
async-trait = "0.1.71"

[dependencies.tokio]
version = "1.28.2"
features = ["full"]
optional = true

[dependencies.which]
version = "4.4.0"
optional = true
