[package]
name = "remote_mount"
version = "0.3.0"
edition = "2021"
authors = ["Blooym"]
license = "AGPL-3.0-only"
repository = "https://github.com/Blooym/Hermes"

[features]
default = ["protocol-full"]
protocol-full = ["protocol-sshfs"]
protocol-sshfs = []

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
async-trait = "0.1.71"
which = "4.4.0"
